tests/expected_output/old/default/function-variable-clash.txt
tests/extracted_compile_time_errors/function-variable-clash.c:4:13: error: called object type 'int' is not a function or function pointer
        return main();
               ~~~~^
dcc explanation: 'main' is the name of a variable but you are trying to call it as a function.
  If 'main' is also the name of a function, you can avoid the clash,
  by changing the name of the variable 'main' to something else.
  See more information here: https://comp1511unsw.github.io/dcc/function-variable-clash.html
